--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,11 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+ExampleApp/ReduxUIExampleApp/ReduxUIExampleApp.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+
+ExampleApp/ReduxUIExampleApp/ReduxUIExampleApp.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+
+ReduxUI.xcworkspace/contents.xcworkspacedata
+
+ReduxUI.xcworkspace/xcshareddata/
